--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ cache:
 after_script: cat ./coverage/lcov.info | coveralls
 jobs:
   include:
-    - stage: "Deploy"
-      if: (NOT type IN (pull_request)) AND ((branch = master))
+    - stage: npm release
+      node_js: "8"
+      script: echo "Deploying to npm ..."
       deploy:
         provider: npm
-        email: $NPM_EMAIL
         api_key: $NPM_API_KEY
-        on: master
+        on: deploy-npm-release
